# overtls-gui

./: Cargo.toml  LICENSE  README-CN.md  README.md  build.rs  installer.wxs
.github/workflows/: ci.yaml  publish.yaml
assets/: main.rc
msi/: installer.wixproj  installer.wxs
src/: content_table.rs  core.rs  logger.rs  main.rs  node_details_dialog.rs  paste_operations.rs  qr_code_dialog.rs  settings_dialog.rs  states_manager.rs  util.rs
