[package]
name = "overtls-gui"
version = "0.1.0"
edition = "2024"
authors = ["ssrlive"]
# license = "MIT OR Apache-2.0"
license-file = "LICENSE"
keywords = ["proxy", "vpn"]
repository = "https://github.com/ssrlive/overtls-gui"
description = "A graphical user interface for managing OverTLS clients."

[dependencies]
arboard = { version = "3.6.1", default-features = false, features = ["image-data"] }
chrono = "0.4.41"
dirs = "6.0.0"
env_logger = "0.11.8"
fltk = { version = "1.5.14", features = ["fltk-bundled"] }
image = "0.25.8"
log = "0.4.28"
overtls = { version = "0.3.6" }
qrcode = "0.14.1"
rfd = { version = "0.15.4", default-features = false, features = ["xdg-portal", "tokio"] }
rqrr = "0.10.0"
run-as = { version = "1.2.5", default-features = false }
screenshot = { version = "0.0.7", git = "https://github.com/ssrlive/screenshot-rs.git", rev = "36f877f" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
tray-icon = { version = "0.21.1", default-features = false, features = ["libxdo"] }
tun2proxy = { version = "0.7.14", default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18.2"

[build-dependencies]
embed-resource = "3.0.5"

[package.metadata.bundle]
name = "OverTLS-GUI"
identifier = "com.ssrlive.overtlsgui"
icon = ["assets/main.png"]
version = "0.1.0"
resources = ["assets"]
copyright = "Copyright (c) ssrlive 2025. All rights reserved."
category = "Utility"
short_description = "OverTLS clients manager"
long_description = """
A graphical user interface for managing OverTLS clients.
"""
deb_depends = []
osx_frameworks = []
osx_url_schemes = ["com.ssrlive.overtlsgui"]
